Fixed the tooltip's z-index (see #4325)

--- a/system/themes/default/src/main.css
+++ b/system/themes/default/src/main.css
@@ -1151,4 +1151,5 @@ fieldset.collapsed > legend {
 	border-radius:4px;
 	position:absolute;
 	left:50%;
+	z-index:99;
 }
